[package]
name = "dishub"
description = "App for posting GitHub activity on Discord"
documentation = "https://cdn.rawgit.com/nabijaczleweli/dishub/doc/dishub/index.html"
repository = "https://github.com/nabijaczleweli/dishub"
readme = "README.md"
keywords = ["discord", "github", "activity", "post"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in dishub.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
rustc-serialize = "0.3"
chrono = "0.2"
hyper = "0.9"
clap = "2.14"
toml = "0.2"

[dependencies.discord]
version = "0.6"
default-features = true


[[bin]]
name = "dishub"
test = false
doc = false
